[package]
name = "bevy_ref_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9.1", default-features = false}
crossbeam-channel = "0.5.4"
parking_lot = "0.12.0"
serde = "1.0.152"
